test/parser/good/multi_digit.ks
int main ( void a )
{
    return 8434325;
}
