test/parser/bad/misspelled_keyword.ks
int main()
{
    returns 4;
}
